520764-cosmos-apim-integration: - made some changes - added unit tests

--- a/src/WCCG.PAS.Referrals.UI/appsettings.json
+++ b/src/WCCG.PAS.Referrals.UI/appsettings.json
@@ -26,7 +26,8 @@
     "ApimGetAllDocumentsEndpoint": "/documents",
     "ApimGetDocumentByIdEndpoint": "/document/{0}",
     "ApimCreateDocumentEndpoint": "/create",
-    "TimeoutSeconds": 15
+    "TimeoutSeconds": 15,
+    "MaxItemCountPerQuery": 10
   },
   "AllowedHosts": "*"
 }
