--- a/src/WCCG.PAS.Referrals.UI/appsettings.Development.json
+++ b/src/WCCG.PAS.Referrals.UI/appsettings.Development.json
@@ -3,13 +3,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "System": "Warning",
-      "Microsoft": "Warning",
-      "Microsoft.AspNetCore": "Error",
-      "Microsoft.AspNetCore.Hosting": "Error"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Hosting": "Warning"
     }
   },
   "ApplicationInsights": {
-    "ConnectionString": "xxx"
+    "ConnectionString": "InstrumentationKey=00000000-0000-0000-0000-000000000000"
   }
 }
