520764 - cosmos apim integration (#2)
---------

Co-authored-by: Patryk Urban <patryku@kainos.com>
Co-authored-by: Denys Dolich <denys.dolich@kainos.com>

--- a/src/WCCG.PAS.Referrals.UI/appsettings.json
+++ b/src/WCCG.PAS.Referrals.UI/appsettings.json
@@ -1,24 +1,33 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Hosting": "Warning"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Warning"
+      }
+    }
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=00000000-0000-0000-0000-000000000000"
+  },
   "ManagedIdentity": {
     "ClientId": "xxx"
   },
   "Cosmos": {
-    "DatabaseEndpoint": "xxx",
-    "DatabaseName": "xxx",
-    "ContainerName": "xxx"
-  },
-
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "System": "Warning",
-      "Microsoft": "Warning",
-      "Microsoft.AspNetCore": "Error",
-      "Microsoft.AspNetCore.Hosting": "Error"
-    }
-  },
-  "ApplicationInsights": {
-    "ConnectionString": "xxx"
+    "ApimEndpoint": "https://xxx",
+    "ApimSubscriptionHeaderName": "Ocp-Apim-Subscription-Key",
+    "ApimSubscriptionKey": "xxx",
+    "ApimGetAllDocumentsEndpoint": "/documents",
+    "ApimGetDocumentByIdEndpoint": "/document/{0}",
+    "ApimCreateDocumentEndpoint": "/create",
+    "TimeoutSeconds": 15,
+    "MaxItemCountPerQuery": 10
   },
   "AllowedHosts": "*"
 }
