--- a/src/WCCG.PAS.Referrals.UI/appsettings.Development.json
+++ b/src/WCCG.PAS.Referrals.UI/appsettings.Development.json
@@ -1,21 +1,13 @@
 {
-  "Cosmos": {
-    "DatabaseEndpoint": "xxx",
-    "DatabaseName": "MyDb",
-    "ContainerName": "ReferralsContainer"
-  },
-
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "System": "Warning",
-      "Microsoft": "Warning",
-      "Microsoft.AspNetCore": "Error",
-      "Microsoft.AspNetCore.Hosting": "Error"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Hosting": "Warning"
     }
   },
   "ApplicationInsights": {
-    "ConnectionString": "xxx"
+    "ConnectionString": "InstrumentationKey=00000000-0000-0000-0000-000000000000"
   }
 }
