Fix endpoints path

--- a/src/WCCG.PAS.Referrals.UI/appsettings.json
+++ b/src/WCCG.PAS.Referrals.UI/appsettings.json
@@ -23,9 +23,9 @@
     "ApimEndpoint": "https://xxx",
     "ApimSubscriptionHeaderName": "Ocp-Apim-Subscription-Key",
     "ApimSubscriptionKey": "xxx",
-    "ApimGetAllDocumentsEndpoint": "/documents",
-    "ApimGetDocumentByIdEndpoint": "/document/{0}",
-    "ApimCreateDocumentEndpoint": "/create",
+    "ApimGetAllDocumentsEndpoint": "documents",
+    "ApimGetDocumentByIdEndpoint": "document/{0}",
+    "ApimCreateDocumentEndpoint": "create",
     "TimeoutSeconds": 15,
     "MaxItemCountPerQuery": 10
   },
