--- a/src/WCCG.PAS.Referrals.UI/appsettings.json
+++ b/src/WCCG.PAS.Referrals.UI/appsettings.json
@@ -24,7 +24,7 @@
     "ApimSubscriptionHeaderName": "Ocp-Apim-Subscription-Key",
     "ApimSubscriptionKey": "xxx",
     "ApimGetAllDocumentsEndpoint": "documents",
-    "ApimGetDocumentByIdEndpoint": "document/{0}",
+    "ApimGetDocumentByIdEndpoint": "documents/{0}",
     "ApimCreateDocumentEndpoint": "create",
     "TimeoutSeconds": 15,
     "MaxItemCountPerQuery": 10
