--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -18,10 +18,9 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: "Deploy Container App"
-        uses: azure/container-apps-deploy-action@v1
-        with:
-          imageToDeploy: "${{ vars.AZURE_DEV_ACR_REGISTRY_URL }}/${{ vars.IMAGE_NAME }}:${{ github.event.inputs.image_tag }}"
-          containerAppName: "${{ vars.CONTAINER_APP_NAME }}"
-          resourceGroup: "${{ vars.RESOURCE_GROUP }}"
-          containerAppEnvironment: "${{ vars.CONTAINER_APP_ENVIRONMENT }}"
-          runtimeStack: "dotnetcore:8.0"
+        run: |
+          az containerapp update \
+            --name "${{ secrets.CONTAINER_APP_NAME }}" \
+            --resource-group "${{ secrets.RESOURCE_GROUP }}" \
+            --image "${{ secrets.AZURE_DEV_ACR_REGISTRY_URL }}/${{ secrets.IMAGE_NAME }}:${{ github.event.inputs.image_tag }}" \
+            --output json
