--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -20,7 +20,8 @@ jobs:
       - name: "Deploy Container App"
         run: |
           az containerapp update \
-            --name "${{ secrets.CONTAINER_APP_NAME }}" \
-            --resource-group "${{ secrets.RESOURCE_GROUP }}" \
-            --image "${{ secrets.AZURE_DEV_ACR_REGISTRY_URL }}/${{ secrets.IMAGE_NAME }}:${{ github.event.inputs.image_tag }}" \
+            --name "${{ vars.CONTAINER_APP_NAME }}" \
+            --resource-group "${{ vars.RESOURCE_GROUP }}" \
+            --image "${{ vars.AZURE_DEV_ACR_REGISTRY_URL }}/${{ vars.IMAGE_NAME }}:${{ github.event.inputs.image_tag }}" \
+            --revision-suffix "${{github.sha}}" \
             --output json
